--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -26,10 +26,18 @@ Het implementeren van nieuwe shapes wordt in een van de appendices uitgebreid be
 Binnen Canvas.hs kan tot op heden alleen met vaste keuren gevuld worden, voor het tekenen van knoppen is het vaak gewenst iets van een kleurverloop te gebruiken. Een kleurverloop kan namelijk diepte bieden aan een grafisch element. Het ondersteunen van kleurverlopen is ook niet lastig, de clientside Javascript library (Kinetic) ondersteunt al kleurverlopen, dus het is een kwestie van het toevoegen en implementeren van een API voor de gebruiker.
 
 \subsubsection{Grafische toolkit}
-\todo{Hier iets schrijven}
+Canvas.hs is voornamelijk een tekenlibrary, de library ondersteunt het tekenen van primitieve figuren. Voor een echte gebruikersinterface is een grafische toolkit noodzakelijk die een set standaard elementen (widgets) bevat (knoppen, invoervelden, vensters etc.). Het voornaamste voordeel van een grafische toolkit is dat er geen rekening gehouden moet worden met event en dat de toolkit zelf bijhoud welk element focus heeft. Sommige demo's pogen widgets te gebruiken (zoals nederland_demo), maar hierin zitten vaak fouten of events die niet afgevangen worden, daartoe is het handig al deze code te centraliseren en te abstraheren voor de gebruiker.
+
+Er is een aanzet gemaakt voor een grafische toolkit in \link{https://www.github.com/Canvas.hs/Widgets.hs} maar dit is in een vroeg stadium vastgelopen. Het idee echter was een nieuwe handler definitie die zichzelf tussen de library en de code van de gebruiker plaatsts, deze handler bekijkt voordat de gebruiker events kijkt eerst of een event op een widget was en gooit dan vervolgens een widgetspecifiek event. Daarnaast hoeven alleen definities gemaakt te worden voor widgets en kan de gebruiker voor de rest zonder Canvas.hs te recompilen gebruikmaken van de nieuwe widgets.
+
+Wel zal er goed nagedacht moeten worden over hoe (mogelijk) meerdere handlers met elkaar praten, wat nou als er zowel een WidgetHandler als een GraphHandler geschreven wordt? En daarnaast moet ook goed bekeken worden hoe de output van de widgets samengevoegd wordt met die van de gebruiker, is het de verantwoordelijkheid van de gebruiker om widgets te tekenen of voegt de library zelf zijn output in.
 
 \subsubsection{Delta updates} \label{subsub:deltas}
 Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteerd de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in Javascript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is. Helaas is dit nog niet triviaal, er moet bijvoorbeeld rekening gehouden worden met identieke nodes (bijvoorbeeld een cirkel op (0,0) met radius 10)
 
 \subsubsection{FPprac module}
-\todo{Hier iets schrijven}
+Binnen het vak Functioneel Programmeren (FP) wordt tot op heden gebruik gemaakt van een module die Prelude vervangt. Binnen Haskell is er een stricte scheiding tussen gehele getallen en natuurlijke getallen, zo is een integer niet persé deelbaar door een andere integer. Voor FP is ervoor gekozen om een \inlinecode{Number} datatype te maken die deze lijn vervaagd, zo kan de gebruiker ongestoord twee integers door elkaar delen, en wordt in de FPPrac module een conversie gedaan naar getalrepresentaties die wel deelbaar zijn.
+
+Binnen Canvas.hs worden echter gewone Int's, Float's etc gebruikt, en hier en daar ook een functie uit Prelude. Omdat FPPrac zijn eigen prelude exporteerd met functies voor hun \inlinecode{Number} klasse moeten er tussenfuncties geschreven worden die het voor de gebruiker mogelijk maken om toch de functies van Canvas.hs aan te kunnen roepen met \inlinecode{Number}'s. Deze taak is eenvoudig, maar het zal moeten gebeuren om compatible te blijven met het huidige Functioneel Programmeren practicum.
+
+Daarnaast zal de handleiding en het materiaal van Functioneel Programeren gewijzigd moeten worden naar Canvas.hs, veel van de primitieven en modifiers zijn hetzelfde als die van Gloss maar hebben net andere parameters, de twee API's zijn niet uitwisselbaar helaas.
