--- a/Hoofdstukken/resultaten/testresultaten.tex
+++ b/Hoofdstukken/resultaten/testresultaten.tex
@@ -9,6 +9,22 @@ Voor de JavaScript code zijn unit tests ontwikkeld in Jasmine. Met behulp van Bl
 \subsubsection{Testcases}
 \newcounter{startvaluetest}
 \begin{enumerate}[label={T\arabic*}]
+	\item Execute actions
+	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
+		\item set fixed proportions
+		\item set fluid proportions
+		\item set window display type fixed
+		\item set window display type fluid
+		\item open control window
+		\item close control window
+	\end{enumerate}
+	\item Parse and run actions
+	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
+		\item parse no actions
+		\item parse fixedsize action
+		\item parse fluidsize action
+		\item parse fullscreen action
+	\end{enumerate}
 	\item Convert colors
 	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
 		\item \label{test:js:convert:rgbajson:rgba} converts rgba json to rgba
@@ -30,6 +46,30 @@ Voor de JavaScript code zijn unit tests ontwikkeld in Jasmine. Met behulp van Bl
 		\item \label{test:js:draw:text} draws text
 		\item \label{test:js:draw:container} draws container
 		\item \label{test:js:draw:container:clipping} draws container with clipping
+	\end{enumerate}
+
+	\item Click events
+	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
+		\item no event handlers
+		\item creating mouse event handlers
+		\item creating mousedrag event handler (special case compared to other mouse event handlers)
+	\end{enumerate}
+	\item Draw elements to test event handling
+	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
+		\item message after mousedown event
+		\item message after mouseclick event
+		\item message after mouseup event
+		\item message after mousedoubleclick event
+		\item message after mouseover event
+		\item message after mouseout event
+		\item message after mousedrag event
+		\item drag end after change of shape
+		\item no drag end after change of shape type
+	\end{enumerate}
+	\item Test realX and realY functions
+	\begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
+		\item realX function
+		\item realY function
 	\end{enumerate}
 	\setcounter{startvaluetest}{\value{enumi}}
 \end{enumerate}
