--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -34,6 +34,7 @@ Wel zal er goed nagedacht moeten worden over hoe (mogelijk) meerdere handlers me
 
 \subsubsection{Delta updates} \label{subsub:deltas}
 Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteerd de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in Javascript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is. Helaas is dit nog niet triviaal, er moet bijvoorbeeld rekening gehouden worden met identieke nodes (bijvoorbeeld een cirkel op (0,0) met radius 10)
+\todo{MR: Deze laatste zin lijkt me nog niet af.}
 
 \subsubsection{FPprac module}
 Binnen het vak Functioneel Programmeren (FP) wordt tot op heden gebruik gemaakt van een module die Prelude vervangt. Binnen Haskell is er een stricte scheiding tussen gehele getallen en natuurlijke getallen, zo is een integer niet persé deelbaar door een andere integer. Voor FP is ervoor gekozen om een \inlinecode{Number} datatype te maken die deze lijn vervaagd, zo kan de gebruiker ongestoord twee integers door elkaar delen, en wordt in de FPPrac module een conversie gedaan naar getalrepresentaties die wel deelbaar zijn.
