--- a/Hoofdstukken/resultaten/tests/haskell.tex
+++ b/Hoofdstukken/resultaten/tests/haskell.tex
@@ -32,10 +32,10 @@
 			\item can decode a keydown event
 			\item can decode *arbitrary* keydown event
 		\end{enumerate}}{}
-		\item keyclick event
+		\item keypress event
 		\iftoggle{longTests}{\begin{enumerate}[label={T\arabic{enumi}.\arabic{enumii}.\arabic*}]
-			\item can decode a keyclick event
-			\item can decode *arbitrary* keyclick event
+			\item can decode a keypress event
+			\item can decode *arbitrary* keypress event
 		\end{enumerate}}{}
 		\item keyup event
 		\iftoggle{longTests}{\begin{enumerate}[label={T\arabic{enumi}.\arabic{enumii}.\arabic*}]
