--- a/references.bib
+++ b/references.bib
@@ -64,10 +64,10 @@
 
 @misc{Aeson,
 	author = {Bryan O'Sullivan},
-	title = "aeson: Fast JSON parsing and encoding",
-	month = "october",
-	year = "2013",
-	howpublished = {\url{http://hackage.haskell.org/package/aeson-0.6.2.1}}
+	title = "Aeson: Fast JSON parsing and encoding",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://hackage.haskell.org/package/aeson-0.7.0.0}}
 }
 
 @misc{jQuery,
@@ -142,6 +142,14 @@
 	howpublished = {\url{http://hackage.haskell.org/package/websockets}}
 }
 
+@misc{AesonTH,
+	author = {Bryan O'Sullivan},
+	title = "Data.Aeson.TH",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://hackage.haskell.org/package/aeson-0.7.0.0/docs/Data-Aeson-TH.html}}
+}
+
 @inproceedings{comet2007,
   title={A comparison of push and pull techniques for ajax},
   author={Bozdag, Engin and Mesbah, Ali and Van Deursen, Arie},
@@ -150,3 +158,6 @@
   year={2007},
   organization={IEEE}
 }
+
+
+http://hackage.haskell.org/package/aeson-0.7.0.0/docs/Data-Aeson-TH.html
