Nu met minder syntaxerrors

--- a/Hoofdstukken/ontwerp/detail/problemen.tex
+++ b/Hoofdstukken/ontwerp/detail/problemen.tex
@@ -32,4 +32,4 @@ data FirstRecord = Fst { key :: String }
 data SecondRecord = Snd { key :: String }
 \end{lstlisting}
 
-De meestgebruikte JSON libraries vertalen records naar JSON. Hierbij nemen ze de sleutel uit het record als sleutelnaam voor de vertaalde JSON. Door bovenstaand omschreven probleem levert dit problemen op als JSON datastructuren sleutelnamen delen. Hierdoor moest handmatig toJSON instanties voor deze datastructuren geschreven worden, wat veel regels triviale code oplevert. Daarnaast wordt in de door Canvas.hs gebruikte datastructuur gebruik gemaakt van het \inlinecode{Maybe}-datatype om aan te geven of een veld van een record al dan niet gevuld is. Aeson, de in Canvas.hs gebruikte JSON-library, encodeert deze lege velden (\inlinecode{field = Nothing}) standaard als \inlinceode{null}. Het protocol vereist echter dat lege velden niet worden meegestuurd. Uiteindelijk zijn deze twee problemen overkomen door het gebruik van TemplateHaskell \cite{AesonTH}. Hiermee is het mogelijk om de \inlinecode{Nothing}-velden niet te encoderen. Daarnaast is het mogelijk om een een vast aantal karakters van de sleutels niet te encoderen, hierdoor wordt het hierboven omschreven probleem opgelost. 
+De meestgebruikte JSON libraries vertalen records naar JSON. Hierbij nemen ze de sleutel uit het record als sleutelnaam voor de vertaalde JSON. Door bovenstaand omschreven probleem levert dit problemen op als JSON datastructuren sleutelnamen delen. Hierdoor moest handmatig toJSON instanties voor deze datastructuren geschreven worden, wat veel regels triviale code oplevert. Daarnaast wordt in de door Canvas.hs gebruikte datastructuur gebruik gemaakt van het \inlinecode{Maybe}-datatype om aan te geven of een veld van een record al dan niet gevuld is. Aeson, de in Canvas.hs gebruikte JSON-library, encodeert deze lege velden (\inlinecode{field = Nothing}) standaard als \inlinecode{null}. Het protocol vereist echter dat lege velden niet worden meegestuurd. Uiteindelijk zijn deze twee problemen overkomen door het gebruik van TemplateHaskell \cite{AesonTH}. Hiermee is het mogelijk om de \inlinecode{Nothing}-velden niet te encoderen. Daarnaast is het mogelijk om een een vast aantal karakters van de sleutels niet te encoderen, hierdoor wordt het hierboven omschreven probleem opgelost. 
