Added some text about the code coverage

--- a/Hoofdstukken/ontwerp/detail/externelibraries.tex
+++ b/Hoofdstukken/ontwerp/detail/externelibraries.tex
@@ -3,7 +3,7 @@
 Bij de ontwikkeling van Canvas.hs is gebruik gemaakt van een aantal externe software bibliotheken. Voor veel van de zaken die in het Canvas.hs pakket moeten gebeuren zijn uitstekende bibliotheken beschikbaar. Hieronder worden de gekozen externe bibliotheken toegelicht.
 
 \subsubsection{HTTP-server}
-Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde JavaScript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de \emph{warp} \cite{Warp} module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn \emph{happstack} \cite{Happstack}, \emph{hyena} \cite{Hyena} en \emph{snap server} \cite{SnapServer}. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs
+Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde JavaScript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de \emph{warp} \cite{Warp} module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn \emph{happstack} \cite{Happstack}, \emph{hyena} \cite{Hyena} en \emph{snap server} \cite{SnapServer}. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs.
 
 \subsubsection{Websockets}
 In Canvas.hs wordt het resultaat van de user applicatie naar de javascript applicatie gestuurd via een webscoket. In Canvas.hs wordt gebruik gemaakt van de \emph{Websockets}  \cite{Websockets} module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden.
