--- a/references.bib
+++ b/references.bib
@@ -5,6 +5,14 @@
 	urldate = {4 Jan 2014},
 	year = {2008}
 }
+
+@misc{HPC,
+	author = "Haskell.org",
+	title = "HPC: Observing Code Coverage",
+	month = "januari",
+    year = "2013",
+	howpublished = {\url{https://www.haskell.org/ghc/docs/7.6.2/html/users_guide/hpc.html}}
+}
 @misc{Gitflow2010,
       author = "Vincent Driessen",
       title = "A successful Git branching model",
