--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,5 +1,5 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
-
+Tijdens de ontwikkeling van Canvas.hs is er tegen een aantal problemen aangelopen. In de eerste sectie van dit hoofdstuk staat hoe deze problemen zijn opgelost en met welke afwegingen dit gedaan is. Daarnaast wordt er in \autoref{sec:planningevaluatie} gekeken naar de het verloop van de planning en in hoeverre daar aan vastgehouden is. Tot slot wordt er in \autoref{sec:organisatieevaluatie} besproken hoe de vooraf gekozen methoden en tools invloed hebben gehad en of er ook op een juiste wijze gebruik van gemaakt is.
 
 \input{./Hoofdstukken/evaluatie/problemen.tex}
 \input{./Hoofdstukken/evaluatie/planning.tex}
