--- a/Hoofdstukken/evaluatie/organisatie.tex
+++ b/Hoofdstukken/evaluatie/organisatie.tex
@@ -1,4 +1,4 @@
-\section{Organisatie}
+\section{Organisatie} \label{sec:organisatieevaluatie}
 De samenwerking is goed verlopen. Daarbij was de duidelijke structuur van zowel het project- als de technische organisatie een belangrijk onderdeel. Deze structuur is eerder beschreven in \fullref{hoofdstuk:organisatie}. Er kon met deze structuur, naar gevoel van de projectgroep, efficiënt gewerkt worden. Er werd wekelijks twee of meer keer samengekomen om te werken aan het project.
 
 \paragraph{Besprekingen} Elke samenkomst is er een kortdurende scrumbespreking gehouden. Bij de dagelijkse besprekingen werd vaak op details in gegaan, hierbij werden ontwerp beslissingen vaak genomen tijdens deze besprekingen.
