--- a/Hoofdstukken/evaluatie/planning.tex
+++ b/Hoofdstukken/evaluatie/planning.tex
@@ -1,5 +1,5 @@
 % !TEX spellcheck = nl_NL
-\section{Planning}
+\section{Planning} \label{sec:planningevaluatie}
 De planning tijdens dit project verliep volgens het scrum model zoals beschreven in \autoref{sec:scrum}. Dit model is flexibel en dynamisch waardoor een onhaalbare planning snel gecorrigeerd kon worden. 
 
 Door per tweewekelijkse sprint te plannen, hoopten we elke sprint een haalbare planning te kunnen maken die vervolgens daadwerkelijk uitgevoerd zou worden. Het belangrijkste probleem met het gebruiken van sprints binnen ons project werd veroorzaakt door de wisselende beschikbaarheid van de teamleden en, in sommige gevallen, de product owner. Het inschatten van de werkdruk van een bepaalde taak is op zichzelf een moeilijke opgave die samengaat met het scrum-model en een per sprint wisselende beschikbaarheid van de teamleden door vakantie- en tentamenweken en de fluctuerende werkdruk van andere vakken maakt het opstellen van een geschikte sprint planning vrijwel onmogelijk.
